feat: adding style on login screen

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/login.css" />
     <title>Rick and Morty Memory Game</title>
   </head>
-  <body></body>
+  <body>
+    <form class="login-form">
+      <div class="login__header">
+        <img src="./images/brain.png" alt="brain icon" />
+        <h1>Memory Game</h1>
+      </div>
+
+      <input type="text" placeholder="Name" class="login__input" />
+      <button type="submit" class="login__button" disabled>Play</button>
+    </form>
+  </body>
 </html>
