--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/login.css" />
+
+    <script defer src="./js/login.js"></script>
     <title>Rick and Morty Memory Game</title>
   </head>
   <body>
