--- a/pages/game.html
+++ b/pages/game.html
@@ -2,11 +2,17 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/game.css" />
     <title>Rick and Morty Memory Game</title>
   </head>
   <body>
-    <h1>Página de Game</h1>
+    <div class="grid">
+      <div class="card">
+        <div class="face front"></div>
+        <div class="face back"></div>
+      </div>
+    </div>
   </body>
 </html>
