--- a/pages/game.html
+++ b/pages/game.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/game.css" />
+    <script defer src="../js/game.js"></script>
     <title>Rick and Morty Memory Game</title>
   </head>
   <body>
