--- a/pages/game.html
+++ b/pages/game.html
@@ -9,11 +9,13 @@
     <title>Rick and Morty Memory Game</title>
   </head>
   <body>
-    <div class="grid">
-      <div class="card">
-        <div class="face front"></div>
-        <div class="face back"></div>
-      </div>
-    </div>
+    <main>
+      <header>
+        <span class="player"></span>
+        <span>Tempo: <span class="timer">00</span></span>
+      </header>
+
+      <div class="grid"></div>
+    </main>
   </body>
 </html>
